objects/Case.object
<CustomObject>
    <fields>
        <fullName>ProjectSupportType__c</fullName>
        <label>Project Support Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analytical</fullName>
                </value>
                <value>
                    <fullName>Customer lab project</fullName>
                </value>
                <value>
                    <fullName>Customer visit</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                    <isActive>false</isActive>
                    <label>Development</label>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                    <isActive>false</isActive>
                    <label>Replacement</label>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                    <isActive>false</isActive>
                    <label>Visit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurchaseOrderLineLocal__c</fullName>
        <description>Manual Purchase Order Line Field for users in countries with Local ERP.</description>
        <label>Purchase Order Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>PurchaseOrderLine__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderLocal__c</fullName>
        <description>Manual Purchase Order Field for users in countries with Local ERP.</description>
        <label>Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>PurchaseOrder__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReasonRejected__c</fullName>
        <label>Reason Rejected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeStatus__c</fullName>
        <description>Text field needed for Riva integration. It is used as a filter which cases should create folders in Notes.</description>
        <formula>RecordType.DeveloperName + &quot;_&quot; + TEXT( Status )</formula>
        <label>RecordType Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceCreditNote__c</fullName>
        <label>Reference Credit Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceDebitNote__c</fullName>
        <label>Reference Debit Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceReclassification__c</fullName>
        <label>Reference Reclassification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RejectionReasonPicklist__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product already exists</fullName>
                </value>
                <value>
                    <fullName>Product obsolete</fullName>
                </value>
                <value>
                    <fullName>Wrong product proposed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrderLineLocal__c</fullName>
        <description>Manual Sales Order Line Field for users in countries with Local ERP.</description>
        <label>Sales Order Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>SalesOrderLine__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrderLocal__c</fullName>
        <description>Manual Sales Order Field for users in countries with Local ERP.</description>
        <label>Sales Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SampleProductName__c</fullName>
        <formula>QuoteLine__r.SBQQ__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettlementDate__c</fullName>
        <description>Date when the case is Resolved</description>
        <label>Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShipToCity__c</fullName>
        <formula>IF(NOT(ISBLANK(AlternativeCity__c)),AlternativeCity__c,
            IF(NOT(ISBLANK(ShiptoAddress__c)),ShiptoAddress__r.City__c,
            IF(UseMainAddress__c, Account.ShippingCity,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-to City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCountry__c</fullName>
        <formula>IF(NOT(ISBLANK(Text(AlternativeCountry__c))),Text(AlternativeCountry__c),
            IF(NOT(ISBLANK(ShiptoAddress__c)),Text(ShiptoAddress__r.Country__c),
            IF(UseMainAddress__c, Account.ShippingCountry,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-to Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToPostalCode__c</fullName>
        <formula>IF(NOT(ISBLANK(AlternativePostalCode__c)),AlternativePostalCode__c,
            IF(NOT(ISBLANK(ShiptoAddress__c)),ShiptoAddress__r.PostalCode__c,
            IF(UseMainAddress__c, Account.ShippingPostalCode,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-to Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToState__c</fullName>
        <formula>IF(NOT(ISBLANK(AlternativeState__c)),AlternativeState__c,
            IF(NOT(ISBLANK(ShiptoAddress__c)),ShiptoAddress__r.State__c,
            IF(UseMainAddress__c, Account.ShippingState,&apos;&apos;)))</formula>
        <label>Ship-to State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToStreet__c</fullName>
        <formula>IF(NOT(ISBLANK(AlternativeStreet__c)),AlternativeStreet__c,
            IF(NOT(ISBLANK(ShiptoAddress__c)),ShiptoAddress__r.Street__c,
            IF(UseMainAddress__c, Account.ShippingStreet,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-to Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingComments__c</fullName>
        <label>Shipping Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShiptoAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-to Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>AccountShiptoAddress__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AccountShiptoAddress__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SummaryOnActions__c</fullName>
        <description>NCR Summary on Action field</description>
        <label>Comment/Summary On Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SupplierIdLocal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A look up to Account with a filter type Supplier Local. Manual Supplier Field for users in countries with Local ERP.</description>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Account)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupplierId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A look up to Account with a filter type Supplier</description>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>CasesSupplier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupplierNCRreference__c</fullName>
        <label>Supplier NCR reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_CreatedByMe__c</fullName>
        <description>Formula field used for &apos;Cases created by me&apos; Case Listview.</description>
        <formula>CreatedById =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TF_CreatedByMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TempProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Temporary product. Temp product cases can only be created for Temp product, but the product might change to a real product at some time.</description>
        <inlineHelpText>Only Temporary products can be selected and Principal should be the same as Principal on Product.</inlineHelpText>
        <label>Temp Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>TempProduct</value>
            </filterItems>
            <filterItems>
                <field>Product2.Principal__c</field>
                <operation>equals</operation>
                <valueField>$Source.PrincipalId__c</valueField>
            </filterItems>
            <infoMessage>Please search and select a temporary product.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalFinancialImpact__c</fullName>
        <formula>CostofGoods__c  +  Costs_of_Handling__c  +  OtherCosts__c  -  Compensation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Financial Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <description>Field used to tracking number information.</description>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>HJ</fullName>
                </value>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>M3</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>GL</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>M1</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>S7</fullName>
                </value>
                <value>
                    <fullName>M2</fullName>
                </value>
                <value>
                    <fullName>UN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfMeasurement__c</fullName>
        <label>Unit of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UnitOfMeasurement</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UseMainAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Main Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WarehouseCode__c</fullName>
        <label>Warehouse code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarehouseIdLocal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manual Product Field for users in countries with Local ERP.</description>
        <label>Warehouse</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Warehouse</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Warehouse)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WarehouseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A look up to Account with a filter type Warehouse</description>
        <label>Warehouse</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>CasesWarehouse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WarehouseInstruction__c</fullName>
        <label>Warehouse Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Non_Conformance_Report</fullName>
        <active>true</active>
        <businessProcess>Non Conformance Report</businessProcess>
        <label>Non Conformance Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sample_Request</fullName>
        <active>true</active>
        <businessProcess>Sample Request</businessProcess>
        <label>Sample Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Request</fullName>
        <active>true</active>
        <businessProcess>Technical Request</businessProcess>
        <label>Technical Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>TemporaryProduct</fullName>
        <active>true</active>
        <businessProcess>Temporary Product</businessProcess>
        <label>Temporary Product</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Summary_Complaint_Required_On_Rejected</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True,
            RecordType.DeveloperName = &apos;Non_Conformance_Report&apos;,
            ISBLANK(ReasonRejected__c),
            ISCHANGED( Status ),
            ISPICKVAL(Status, &apos;Rejected&apos;)
            )</errorConditionFormula>
        <errorMessage>The field &apos;Reason Rejected&apos; is required to reject a NCR case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>allowedStatusTempProduct</fullName>
        <active>true</active>
        <description>Allowed status transition for Temp products</description>
        <errorConditionFormula>IF (
            AND (
            $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True,
            RecordType.DeveloperName = &apos;TemporaryProduct&apos;,
            ISPICKVAL ( PRIORVALUE ( Status ), &apos;Submitted&apos; )
            ),
            NOT ( $Permission.LockedProductBypass ),
            false
            )</errorConditionFormula>
        <errorMessage>It&apos;s not possible to change the status from status from Submitted, once the Temp product is submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>conditionsRejectProduct</fullName>
        <active>true</active>
        <description>Only the Product Manager of the related Temporary Product can reject Temporary Products.</description>
        <errorConditionFormula>IF (
            AND (
            $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True,
            RecordType.DeveloperName = &apos;TemporaryProduct&apos;,
            ISPICKVAL (Status, &apos;Rejected&apos;),
            $User.Id &lt;&gt;  TempProductId__r.ProductManager__c
            ),
            NOT ( $Permission.LockedProductBypass ),
            false
            )</errorConditionFormula>
        <errorMessage>Only the Product Manager of the related Temporary Product can reject Temporary Products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>conditionsTempProduct</fullName>
        <active>true</active>
        <description>Only the Product Owner of the related Temporary Product can submit Temporary Products.</description>
        <errorConditionFormula>IF (
            AND (
            $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True,
            RecordType.DeveloperName = &apos;TemporaryProduct&apos;,
            ISPICKVAL (Status, &apos;Submitted&apos;),
            $User.Id &lt;&gt;  TempProductId__r.ProductManager__c
            ),
            NOT ( $Permission.LockedProductBypass ),
            false
            )</errorConditionFormula>
        <errorMessage>Only the Product Owner of the related Temporary Product can submit Temporary Products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>restrictCaseDetailsManualFields</fullName>
        <active>true</active>
        <description>Restrict the access to the &quot;Case details - manual references&quot; Fields to the users with Permission Set &quot;IMCD NCR Manual Fields Access&quot;.</description>
        <errorConditionFormula>IF (
     AND (
           $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c = True,
           OR ( ISCHANGED ( SalesOrderLocal__c ),
                ISCHANGED ( SalesOrderLineLocal__c ), 
                ISCHANGED ( PurchaseOrderLocal__c ), 
                ISCHANGED ( PurchaseOrderLineLocal__c ), 
                ISCHANGED ( ProductLocal__c ),
                ISCHANGED ( SupplierIdLocal__c ),
                ISCHANGED ( WarehouseIdLocal__c ),
                ISCHANGED ( CarrierIdLocal__c )
               )
          ),
     NOT ( $Permission.NCRManualFieldsAccess ),
     false
     )</errorConditionFormula>
        <errorMessage>Manual reference can only be applied by users with the required permission (Servicedesk and users in countries without Order integration).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>restrictStatusAssignedToWarehouse</fullName>
        <active>true</active>
        <description>Restrict Status &apos;Assigned to Warehouse&apos; if the Data is incomplete.</description>
        <errorConditionFormula>AND (
				ISCHANGED( Status )
				, ISPICKVAL( Status, &apos;Assigned to warehouse&apos; )
    , CONTAINS( UPPER( MissingInfo__c ), &apos;INCOMPLETE&apos; )  
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>This Status is not allowed until the minimum set of data on the Case is completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>tempProductLocked</fullName>
        <active>true</active>
        <description>Temporary product is locked for integration</description>
        <errorConditionFormula>IF (
            AND (
            $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True,
            RecordType.DeveloperName = &apos;TemporaryProduct&apos;,
            ISPICKVAL (Status, &apos;Submitted&apos;),
            OR (
            TempProductId__r.LockedForIntegration__c = true
            )
            ),
            NOT ( $Permission.LockedProductBypass ),
            false
            )</errorConditionFormula>
        <errorMessage>The associated temporary product is locked for integration.</errorMessage>
    </validationRules>
</CustomObject>